--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.port=8081
 spring.data.mongodb.uri=mongodb+srv://sachin23pandey:sachin123@cluster0.fyg4v6z.mongodb.net/productsdata
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.application.name=product-service
